# VSRG-UNO-R3

./: .gitmodules  LICENSE  README.md
arduino/A1-AP/: A1-AP.ino
arduino/A2-KPS-KS/: A2-KPS-KS.ino
arduino/KPS-Display/: KPS-Display.ino
arduino/Keystrokes-Display/: Keystrokes-Display.ino
arduino/Solenoid-Array/: Solenoid-Array.ino
computer/: CMakeLists.txt  arduinoap.cpp  arduinoap.h  arduinohandler.cpp  arduinohandler.h  computerap.cpp  computerap.h  computerapkey.cpp  computerapkey.h  computerks.cpp  computerks.h  main.cpp  mainwindow.cpp  mainwindow.h  makefile  serial.cpp  serial.h  websocketmonitor.cpp  websocketmonitor.h
computer/CLI/include/: arduinohandler.cpp  arduinohandler.hpp  beatmap.cpp  beatmap.hpp  omaniaparser.cpp  omaniaparser.hpp  osuenv.cpp  osuenv.hpp  serial.cpp  serial.hpp
computer/CLI/src/: main.cpp
computer/GUI/: configbox.cpp  configbox.h  consolebox.cpp  consolebox.h  historybox.cpp  historybox.h  imgbox.cpp  imgbox.h  mainwindow.cpp  mainwindow.h
computer/Osu/: autoplayer.cpp  autoplayer.h  autoplayerkey.cpp  autoplayerkey.h  keyreader.cpp  keyreader.h  osuhandler.cpp  osuhandler.h
computer/Utils/: hoverframe.cpp  hoverframe.h  osumem.cpp  osumem.h  shorthand.h  utils.cpp  utils.h
computer/include/Keystrokes-Display/: keychecker.cpp  keychecker.h  osuenv.cpp
computer/include/Solenoid-Array/: beatmap.cpp  beatmap.h  omaniaparser.cpp  omaniaparser.h  osuenv.h
computer/src/Keystrokes-Display/: main.cpp
computer/src/Solenoid-Array/: main.cpp
doc/Milestone-01/: CS362-Milestone-01-John.txt
doc/Milestone-03/: CS362-Milestone-03.tex
doc/Milestone-04/: CS362-Milestone-04.tex
doc/Milestone-09/: CS362-Milestone-09.tex
docs/Milestone-01/: CS362-Milestone-01-Ryan.txt
docs/Milestone-02/: CS362-Milestone-02.tex
res/github/: errors.txt
res/osu!/: Beatmaps.txt
res/res/: config.ini  icon.rc
test/: README.md
test/1803916 Arctic Indexed Systems - Nightburner/: Arctic Indexed Systems. - Nightburner (arccat) [Dusk of Opulence].osu
test/1903205 -45 - The ArcticLight/: -45 - The ArcticLight (tyrcs) [9th Dan].osu
test/2104178 LV4 - Burning Star/: LV.4 - Burning Star (Bacon Haniwa) [Nova 1.25x (219bpm) OD8].osu  LV.4 - Burning Star (Bacon Haniwa) [Nova].osu
test/2118197 Kommisar - AKARI BEAM CANNON LAST BOSS/: Kommisar - AKARI BEAM CANNON LAST BOSS ([GB]V1do) [NOODLE BEAM].osu
